Fixed the extra space between video and other blocks

--- a/app/assets/stylesheets/style.scss
+++ b/app/assets/stylesheets/style.scss
@@ -388,7 +388,6 @@ a[aria-expanded=false] .glyphicon-chevron-down {
   position:relative;
   padding-bottom:56.25%;
   padding-top:30px;
-  height:0;
   overflow:hidden;
 }
 
@@ -400,5 +399,6 @@ a[aria-expanded=false] .glyphicon-chevron-down {
   height:100%;
   max-width:854px;
   max-height:480px;
+  margin-top:10%;
 }
 
